--- a/spring-batch-csv-to-mysql/src/main/resources/application.yml
+++ b/spring-batch-csv-to-mysql/src/main/resources/application.yml
@@ -13,4 +13,4 @@ spring:
         current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
 logging:
   level:
-    org.springframework.boot: DEBUG
+    org.springframework.boot: INFO
